--- a/projet.html
+++ b/projet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="projet.css" />
+    <link rel="stylesheet" href="css/projet.css" />
     <title>Portfolio</title>
 </head>
 <body>
@@ -30,7 +30,7 @@
                 <span>2024  ·  BUT 1</span>
             </div>
 
-            <a class="titre_projet">Création d'un réseau et installation des services associés</a>
+            <a class="titre_projet" href="projets/site_sae24/index.html" target="_blank">Création d'un réseau et installation des services associés</a>
 
             <div class="texte_projet">
                 <p>Pour ce projet nous étions en groupe de 5 et nous devions créer un petit réseau d'entreprise avec 2 postes client et 2 serveurs (un sur Linux et l'autre sur 
@@ -41,12 +41,12 @@
             </div>
 
             <div class="techno">
-                <a class="techno_a" href="https://crouton.net" target="_blank">PHP</a>
-                <a class="techno_a" href="https://crouton.net" target="_blank">SQL</a>
+                <a class="techno_a" href="https://www.php.net/" target="_blank">PHP</a>
+                <a class="techno_a" href="https://fr.wikipedia.org/wiki/Structured_Query_Language" target="_blank">SQL</a>
             </div>
 
             <div class="lien">
-                <a href="https://github.com/RobinBouvier/memo-php" target="_blank">
+                <a href="projets/site_sae24/index.html" target="_blank">
                     <img class="lien_image" src="images/lien_autre_part.svg">
                 </a>
             </div>
@@ -84,6 +84,9 @@
 
             <div class="lien">
                 <a href="https://github.com/RobinBouvier/memo-php" target="_blank">
+                    <img class="inverted_image_link" src="images/github.svg">
+                </a>
+                <a href="projets/memo-php-main/index.php" target="_blank">
                     <img class="inverted_image_link" src="images/lien_autre_part.svg">
                 </a>
             </div>
