--- a/projet.html
+++ b/projet.html
@@ -53,14 +53,20 @@
         </div>
 
         <div class="image_projet">
-            <img src="images/placeholder.png">
+            <video loop="" muted="" preload="metadata" autoplay>
+                <source src="images/video_sae24.mp4" type="video/mp4">
+            </video>
         </div>
     </div>
     
     <div class="inverted_container">
 
         <div class="image_projet_inverted">
-            <img src="images/placeholder.png">
+
+            <video loop="" muted="" preload="metadata" autoplay>
+                <source src="images/video_memo.mp4" type="video/mp4">
+            </video>
+
         </div>
 
         <div class="bloc_texte_inverted">
