--- a/fr/contact.html
+++ b/fr/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Portfolio</title>
 </head>
 
@@ -19,15 +19,16 @@
             <li><a href="divers.html">Divers</a></li>
             <li><a href="projet.html">Projets</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a id="btnDownload" href="images/CV_Portfolio.pdf" download="CV BOUVIER Robin">Télécharger le CV</a></li>
+            <li><a id="btnDownload" href="../images/CV_Portfolio.pdf" download="CV BOUVIER Robin">Télécharger le CV</a></li>
+            <li><a href="../en/contact.html">🇬🇧</a></li>
         </ul>
     </nav>
 
     <h1 class="titre">Contact</h1>
     <section class="bloc_texte">
-    <p id="contact_p"><img src="images/mail.svg" class="icone">Mail : robin.bouvier@etu.uca.fr </p>
-    <p id="contact_p"><img src="images/github.svg" class="icone">Github : <a class="contact_lien" href="https://github.com/RobinBouvier" target="_blank">https://github.com/RobinBouvier</a></p>
-    <p id="contact_p"><img src="images/linkedin.svg" class="icone">LinkedIn : <a class="contact_lien" href="https://www.linkedin.com/in/robin-bouvier10/" target="_blank">https://www.linkedin.com/in/robin-bouvier10/</a></p>
+    <p id="contact_p"><img src="../images/mail.svg" class="icone">Mail : robin.bouvier@etu.uca.fr </p>
+    <p id="contact_p"><img src="../images/github.svg" class="icone">Github : <a class="contact_lien" href="https://github.com/RobinBouvier" target="_blank">https://github.com/RobinBouvier</a></p>
+    <p id="contact_p"><img src="../images/linkedin.svg" class="icone">LinkedIn : <a class="contact_lien" href="https://www.linkedin.com/in/robin-bouvier10/" target="_blank">https://www.linkedin.com/in/robin-bouvier10/</a></p>
     </section>
 </body>
 </html>
