--- a/fr/divers.html
+++ b/fr/divers.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/divers.css" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/divers.css" />
     <title>Portfolio</title>
 </head>
 <body>
@@ -19,7 +19,8 @@
             <li><a href="divers.html">Divers</a></li>
             <li><a href="projet.html">Projets</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a id="btnDownload" href="images/CV_Portfolio.pdf" download="CV BOUVIER Robin">Télécharger le CV</a></li>
+            <li><a id="btnDownload" href="../images/CV_Portfolio.pdf" download="CV BOUVIER Robin">Télécharger le CV</a></li>
+            <li><a href="../en/divers.html">🇬🇧</a></li>
         </ul>
     </nav>
 
@@ -37,7 +38,7 @@
             La discographie du groupe Toto est celle que j'apprécie le plus mais j'aime aussi celle de Queen et Pink Floyd.
             Mes albums préférés sont de loin <strong>The Dark Side of the Moon</strong> et <strong>Mindfields</strong>.<br><br>
 
-            <img class="album" src="images/the_dark_side_of_the_moon.jpg"> <img class="album" src="images/mindfields.jpg">
+            <img class="album" src="../images/the_dark_side_of_the_moon.jpg"> <img class="album" src="../images/mindfields.jpg">
 
         </p>
     </section>
@@ -67,13 +68,13 @@
 
         <div class="afficheDiversDiv">
             <a href="https://fr.wikipedia.org/wiki/Piège_de_cristal" target="_blank">
-                <img src="images/piege_de_cristal.jpg" class="afficheDivers">
+                <img src="../images/piege_de_cristal.jpg" class="afficheDivers">
             </a>
             <a href="https://fr.wikipedia.org/wiki/Night_Call" target="_blank">
-                <img src="images/nightcall.jpg" class="afficheDivers">
+                <img src="../images/nightcall.jpg" class="afficheDivers">
             </a>
             <a href="https://fr.wikipedia.org/wiki/Yannick_(film)" target="_blank">
-                <img src="images/yannick.jpg" class="afficheDivers">
+                <img src="../images/yannick.jpg" class="afficheDivers">
             </a>
         </div>
     </section>
