--- a/fr/exp_pro.html
+++ b/fr/exp_pro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Portfolio</title>
 </head>
 <body>
@@ -18,14 +18,15 @@
             <li><a href="divers.html">Divers</a></li>
             <li><a href="projet.html">Projets</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a id="btnDownload" href="images/CV_Portfolio.pdf" download="CV BOUVIER Robin">Télécharger le CV</a></li>
+            <li><a id="btnDownload" href="../images/CV_Portfolio.pdf" download="CV BOUVIER Robin">Télécharger le CV</a></li>
+            <li><a href="../en/exp_pro.html">🇬🇧</a></li>
         </ul>
     </nav>
 
     <h1 class="titre">Expérience professionelle</h1>
 
     <section class="bloc_texte">
-        <img id="photo_gel" src="images/gel43.jpg"/>
+        <img id="photo_gel" src="../images/gel43.jpg"/>
         <p class="texte">
             <strong>Août 2023 et 2024 : Préparateur de commandes</strong><br><br>
 
