--- a/fr/index.html
+++ b/fr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <title>Portfolio</title>
 </head>
 <body>
@@ -18,13 +18,14 @@
             <li><a href="divers.html">Divers</a></li>
             <li><a href="projet.html">Projets</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a id="btnDownload" href="images/CV_Portfolio.pdf" download="CV BOUVIER Robin">Télécharger le CV</a></li>
+            <li><a id="btnDownload" href="../images/CV_Portfolio.pdf" download="CV BOUVIER Robin">Télécharger le CV</a></li>
+            <li><a href="../en/index.html">🇬🇧</a></li>
         </ul>
     </nav>
 
     <h1 id="nom">BOUVIER Robin</h1>
 
-    <img id="photo_moi" src="images/photo1.png">
+    <img id="photo_moi" src="../images/photo1.png">
 
     <p id="but_rt">Étudiant en deuxième année de Bachelor Universitaire de Technologie <br> Réseaux et Télécommuncations </p>
     <br><br><br><br><br>
