--- a/fr/projet.html
+++ b/fr/projet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/projet.css" />
+    <link rel="stylesheet" href="../css/projet.css" />
     <title>Portfolio</title>
 </head>
 <body>
@@ -18,7 +18,8 @@
             <li><a href="divers.html">Divers</a></li>
             <li><a href="projet.html">Projets</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a id="btnDownload" href="images/CV_Portfolio.pdf" download="CV BOUVIER Robin">Télécharger le CV</a></li>
+            <li><a id="btnDownload" href="../images/CV_Portfolio.pdf" download="CV BOUVIER Robin">Télécharger le CV</a></li>
+            <li><a href="../en/projet.html">🇬🇧</a></li>
         </ul>
     </nav>
 
@@ -30,7 +31,7 @@
                 <span>2024  ·  BUT 1</span>
             </div>
 
-            <a class="titre_projet" href="projets/site_sae24/index.html" target="_blank">Création d'un réseau et installation des services associés</a>
+            <a class="titre_projet" href="../projets/site_sae24/index.html" target="_blank">Création d'un réseau et installation des services associés</a>
 
             <div class="texte_projet">
                 <p>Pour ce projet nous étions en groupe de 5 et nous devions créer un petit réseau d'entreprise avec 2 postes client et 2 serveurs (un sur Linux et l'autre sur 
@@ -46,15 +47,15 @@
             </div>
 
             <div class="lien">
-                <a href="projets/site_sae24/index.html" target="_blank">
-                    <img class="lien_image" src="images/lien_autre_part.svg">
+                <a href="../projets/site_sae24/index.html" target="_blank">
+                    <img class="lien_image" src="../images/lien_autre_part.svg">
                 </a>
             </div>
         </div>
 
         <div class="image_projet">
             <video loop="" muted="" preload="metadata" autoplay>
-                <source src="images/video_sae24.mp4" type="video/mp4">
+                <source src="../images/video_sae24.mp4" type="video/mp4">
             </video>
         </div>
     </div>
@@ -64,7 +65,7 @@
         <div class="image_projet_inverted">
 
             <video loop="" muted="" preload="metadata" autoplay>
-                <source src="images/video_memo.mp4" type="video/mp4">
+                <source src="../images/video_memo.mp4" type="video/mp4">
             </video>
 
         </div>
@@ -90,10 +91,10 @@
 
             <div class="lien">
                 <a href="https://github.com/RobinBouvier/memo-php" target="_blank">
-                    <img class="inverted_image_link" src="images/github.svg">
+                    <img class="inverted_image_link" src="../images/github.svg">
                 </a>
-                <a href="projets/memo-php-main/index.php" target="_blank">
-                    <img class="inverted_image_link" src="images/lien_autre_part.svg">
+                <a href="../projets/memo-php-main/index.php" target="_blank">
+                    <img class="inverted_image_link" src="../images/lien_autre_part.svg">
                 </a>
             </div>
         </div>
