--- a/fr/divers.html
+++ b/fr/divers.html
@@ -61,9 +61,7 @@
             le jeu de Jake Gyllenhaal dans le rôle de Lou, qui veut trouver des images de plus en plus graphiques et qui s'enfonce dans ce travail 
             quitte à ne plus avoir de morale.<br> <br>
         
-            Enfin, "Yannick" est une comédie qui possède des personnages très bien écrits et bien joués, notamment Yannick joué par Raphaël Quenard
-            qui s'ennuie devant une pièce de théâtre et décide de l'arrêter. S'ensuivent des péripéties où Yannick décide de réécrire la pièce 
-            pour la rendre meilleure selon lui et la fait jouer par les comédiens. <br>
+            mettre barton fink ou mary and max ici <br>
         </p>
 
         <div class="afficheDiversDiv">
@@ -73,9 +71,8 @@
             <a href="https://fr.wikipedia.org/wiki/Night_Call" target="_blank">
                 <img src="../images/nightcall.jpg" class="afficheDivers">
             </a>
-            <a href="https://fr.wikipedia.org/wiki/Yannick_(film)" target="_blank">
-                <img src="../images/yannick.jpg" class="afficheDivers">
-            </a>
+            
+
         </div>
     </section>
 
