--- a/fr/formation.html
+++ b/fr/formation.html
@@ -27,6 +27,7 @@
 
     <section class="bloc_texte">
         <p class="texte">
+            <strong>Janvier 2025 : </strong> Validation du troisième semestre.<br><br>
             <strong>Septembre 2024 : </strong> Entrée en deuxième année de BUT Réseaux et Télécommunications à Aubière (63).
         </p>
     </section>
