--- a/fr/index.html
+++ b/fr/index.html
@@ -34,8 +34,8 @@
     <p class="texte">J'ai 19 ans et je suis actuellement en deuxième année de Bachelor Universitaire de Technologie (BUT) Réseaux et Télécommunications à Aubière (63). <br><br>
     J'ai choisi ces études grâce au stage que j'ai pu faire à l'UTT (Université de Technologie de Troyes) où j'ai pu voir les bases des réseaux et manipuler différents appareils.
     En groupe, nous avons configuré des switches pour permettre des parties de jeu en réseau local sur le jeu Teeworlds.
-    Les explications des étudiants et la finalité du projet proposé m'ont fait comprendre que le réseau était la voie que je souhaitais emprunter.<br><br>
-    Je suis actuellement à la recherche d'un stage dans le domaine des réseaux, des télécommunications et de la cybersécurité d'une durée de 10 mois à compter d'avril 2025. </p>
+    Les explications des étudiants et la finalité du projet proposé m'ont fait comprendre que le réseau était la voie que je souhaitais emprunter.<br><br>.
+    Je vais faire un stage dans le domaine des télécommuncations chez TFC Auvergne (43) à partir d'avril 2025.</p>
 
 </body>
 </html>
