--- a/fr/competences.html
+++ b/fr/competences.html
@@ -61,7 +61,10 @@
 
         <p class="texte">
             <strong>Transmission numérique : </strong><progress value="70" max="100"></progress> 70%<br>
-            
+            Au cours de ma deuxième année de BUT, j'ai appris à transmettre des données numériques entre un émetteur et un récepteur. 
+            J'ai vu comment fonctionnait les différentes modulations (ASK, FSK, PSK) et comment les utiliser pour transmettre des données.
+            Cette compétence a été utilisé pour un projet qui consistait à effectuer une transmission entre de SDR (Software Defined Radio), vous pouvez 
+            voir ce projet au lien ci-contre : (faut mettre un lien là).
         </p>
     </section>
 
@@ -112,6 +115,13 @@
             La création de ce portfolio ainsi que les différents projets m'ont aidé à progresser dans la programmation avec ces langages.
             J'ai pu apprendre à utiliser le langage PHP pour créer des pages dynamiques et à utiliser des bases de données SQL pour stocker des informations.
             De plus, j'ai appris à faire communiquer les 2 langages pour récupérer des informations dans la base de données et les afficher sur une page web. 
+        </p>
+
+        <p class="texte">
+            <strong>Java </strong><progress value="75" max="100"></progress> 75%<br>
+            J'ai pu apprendre les bases de la programmation en Java lors de ma deuxième année de BUT. J'ai vu comment fonctionnait le langage en lui même et nous avons appris
+            à programmer en orienté objet avec ce langage. J'ai utilisé ce langage dans un projet de programmation pour créer une application semblable à Twitter sur Android Studio.
+            Vous pouvez retrouver ce projet dans la rubrique projet (faut mettre un lien là).
         </p>
     </section>
 
