--- a/fr/projet.html
+++ b/fr/projet.html
@@ -25,7 +25,54 @@
 
     <h1 class="titre">Projets</h1>
 
+    <div class="inverted_container">
+
+        <div class="image_projet_inverted">
+
+            <video loop="" muted="" preload="metadata" autoplay>
+                <source src="../images/video_sae31.mp4" type="video/mp4">
+            </video>
+
+        </div>
+
+        <div class="bloc_texte_inverted">
+            <div class="inverted_type">
+                <span class="inverted_span">2024  ·  BUT 2</span>
+            </div>
+
+            <a class="titre_projet_inverted">Transmission numérique entre deux SDR ADALM-Pluto</a>
+
+            <div class="texte_projet">
+                <p>
+                    Pour ce projet, nous étions en groupe de 2 et nous devions réaliser une transmission numérique entre deux SDR ADALM-Pluto.
+                    Nous avons d'abord vu comment fonctionnait les SDR et comment les programmer avec MATLAB en testant plusieurs types de codages en bande de base. 
+                    Nous avons ensuite pour programmer les différentes étapes de la transmission (modulation, codage, décodage, démodulation ...) avec différents
+                    types de modulation (ASK, FSK, MPSK ...). 
+                    Nous avons ensuite testé nos programme sur les SDR pour vérifier que les transmissions étaient correctes. 
+                    Ce projet n'a pas encore été noté.
+                </p>
+            </div>
+
+            <div class="inverted_techno">
+                <a class="inverted_techno_link" href="https://fr.mathworks.com/products/matlab.html" target="_blank">MATLAB</a>
+                <a class="inverted_techno_link" href="https://www.analog.com/en/resources/evaluation-hardware-and-software/evaluation-boards-kits/adalm-pluto.html#eb-overview" target="_blank">ADALM-Pluto</a>
+            </div>
+
+            <div class="lien">
+                <a href="../images/SAE31_Archive.zip" target="_blank">
+                    <img class="inverted_image_link" src="../images/archive.svg" title="Télécharger une archive avec les codes sources">
+                </a>
+                <a href="../images/SAE31_Compte_Rendu.pdf" target="_blank">
+                    <img class="inverted_image_link" src="../images/download.svg" title="Télécharger uniquement le compte rendu">
+                </a>
+            </div>
+        </div>
+        
+        
+    </div>
+
     <div class="container">
+
         <div class="bloc_texte">
             <div class="type">
                 <span>2024  ·  BUT 1</span>
@@ -85,8 +132,8 @@
             </div>
 
             <div class="inverted_techno">
-                <a class="inverted_techno_link" href="https://crouton.net" target="_blank">PHP</a>
-                <a class="inverted_techno_link" href="https://crouton.net" target="_blank">SQL</a>
+                <a class="inverted_techno_a" href="https://www.php.net/" target="_blank">PHP</a>
+                <a class="inverted_techno_a" href="https://fr.wikipedia.org/wiki/Structured_Query_Language" target="_blank">SQL</a>
             </div>
 
             <div class="lien">
