--- a/projets/site_sae24/index.html
+++ b/projets/site_sae24/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <div class="buttons">
-            <button class="dynamic-button" onclick="location.href='../../projet.html'">Retour au portfolio</button>
+            <button class="dynamic-button" onclick="location.href='../../fr/projet.html'">Retour au portfolio</button>
             <button class="dynamic-button" onclick="location.href='pres_projet/html/presentation.html'">Présentation du projet</button>
         </div>
     </div>
