trois fois rien

--- a/fr/projet.html
+++ b/fr/projet.html
@@ -25,6 +25,39 @@
 
     <h1 class="titre">Projets</h1>
 
+    <div class="container">
+
+        <div class="bloc_texte">
+            <div class="type">
+                <span>2025  ·  BUT2</span>
+            </div>
+
+            <a class="titre_projet" href="../projets/site_sae24/index.html" target="_blank">Création d'une application communiquante</a>
+
+            <div class="texte_projet">
+                <p>alors là ici on hack la nasa et la nsa et le fbi et ta mère la pute ah non merde je suis me sui+s +tromp& de sa&&&&&& zut alors<br>
+                </p>
+            </div>
+
+            <div class="techno">
+                <a class="techno_a" href="https://www.java.com/fr/download/help/whatis_java.html" target="_blank">Java</a>
+                <a class="techno_a" href="https://developer.android.com/studio?hl=fr" target="_blank">Android Studio</a>
+            </div>
+
+            <div class="lien">
+                <a href="../projets/site_sae24/index.html" target="_blank">
+                    <img class="lien_image" src="../images/lien_autre_part.svg">
+                </a>
+            </div>
+        </div>
+
+        <div class="image_projet">
+            <video loop="" muted="" preload="metadata" autoplay>
+                <source src="../images/video_sae24.mp4" type="video/mp4">
+            </video>
+        </div>
+    </div>
+
     <div class="inverted_container">
 
         <div class="image_projet_inverted">
