--- a/fr/projet.html
+++ b/fr/projet.html
@@ -25,6 +25,51 @@
 
     <h1 class="titre">Projets</h1>
 
+    <div class="inverted_container">
+
+        <div class="image_projet_inverted">
+
+            <video loop="" muted="" preload="metadata" autoplay>
+                <source src="../images/video_sae34.mp4" type="video/mp4">
+            </video>
+
+        </div>
+
+        <div class="bloc_texte_inverted">
+            <div class="inverted_type">
+                <span class="inverted_span">2025  ·  BUT 2</span>
+            </div>
+
+            <a class="titre_projet_inverted">Introduction au pentesting</a>
+
+            <div class="texte_projet">
+                <p>
+                    Par groupe de deux, nous avons réalisé un projet de pentesting en attaquant différentes machines virtuelles fourni par TCM Security.<br>
+
+                    En plus de réussir à trouver les différentes failles de sécurité, nous devions rédiger un rapport détaillé sur les différentes étapes de l'attaque.<br>
+                    Notre méthodologie consistait d'abord à scanner les machines pour trouver les ports ouverts, puis à essayer de trouver des failles pour obtenir un accès à la machine. 
+                    Enfin avec des failles de sécurité nous exécutions une escalade de privilèges.<br>
+                    Nous avons réussi à obtenir les droits root et à trouver les drapeaux sur 4 des 5 machines.<br><br>
+
+                    J'ai eu la note de 15,20/20 pour ce projet. Vous pouvez retrouver le rapport détaillé en cliquant sur le lien juste en dessous.
+                </p>
+            </div>
+
+            <div class="inverted_techno">
+                <a class="inverted_techno_link" href="https://www.kali.org/" target="_blank">Kali Linux</a>
+                <a class="inverted_techno_link" href="https://tcm-sec.com/" target="_blank">TCM Security</a>
+            </div>
+
+            <div class="lien">
+                <a href="../images/SAE34-DUCREY-BOUVIER.pdf" target="_blank">
+                    <img class="inverted_image_link" src="../images/download.svg" title="Télécharger le compte rendu">
+                </a>
+            </div>
+        </div>
+        
+        
+    </div>
+
     <div class="container">
 
         <div class="bloc_texte">
@@ -32,10 +77,16 @@
                 <span>2025  ·  BUT2</span>
             </div>
 
-            <a class="titre_projet" href="../projets/site_sae24/index.html" target="_blank">Création d'une application communiquante</a>
+            <a class="titre_projet" href="https://github.com/RobinBouvier/PikTer" target="_blank">Création d'une application communiquante</a>
 
             <div class="texte_projet">
-                <p>alors là ici on hack la nasa et la nsa et le fbi et ta mère la pute ah non merde je suis me sui+s +tromp& de sa&&&&&& zut alors<br>
+                <p>Afin de parfaire nos connaissances en Java, j'ai pu créer une application sous android qui permet d'envoyer et de recevoir des messages sur un feed.<br>
+                    Pour cela nous avons utiliser Android Studio et Java pour la partie programmation et nous avons utilisé une base de donnée Firebase pour stocker les messages.<br>
+                    Le choix de cette base de donnée a été fait pour sa simplicité d'utilisation et sa gratuité pour les petites applications.<br>
+                    J'ai pu apprendre à utiliser de manière concrète le Java et le XML pour le fonctionnement de l'application ainsi que les services de Firebase pour la gestion 
+                    des utilisateurs et des messages.<br><br>
+
+                    Pour ce projet, j'ai eu la note de 14,25/20 alors que la moyenne de classe était de 10/20.
                 </p>
             </div>
 
@@ -45,7 +96,7 @@
             </div>
 
             <div class="lien">
-                <a href="../projets/site_sae24/index.html" target="_blank">
+                <a href="https://github.com/RobinBouvier/PikTer" target="_blank">
                     <img class="lien_image" src="../images/lien_autre_part.svg">
                 </a>
             </div>
@@ -53,7 +104,7 @@
 
         <div class="image_projet">
             <video loop="" muted="" preload="metadata" autoplay>
-                <source src="../images/video_sae24.mp4" type="video/mp4">
+                <source src="../images/video_sae32.mp4" type="video/mp4">
             </video>
         </div>
     </div>
