competences ft. projets in english

--- a/en/index.html
+++ b/en/index.html
@@ -31,11 +31,13 @@
     <br><br><br><br><br>
 
     <h1 class="titre">About Me</h1>
-    <p class="texte">I am 19 years old and I am currently in my second year of University Technology Diploma (BUT) in Networks and Telecommunications in Aubière (63). <br><br>
-    I chose this field of study thanks to an internship I did at UTT (University of Technology of Troyes), where I was introduced to the basics of networking and worked with various devices.
-    In a group, we configured switches to enable local network gaming sessions on the game Teeworlds.
-    The explanations provided by the students and the outcome of the proposed project made me realize that networking was the path I wanted to pursue.<br><br>
-    I am currently looking for an internship in the fields of networking, telecommunications, and cybersecurity for a duration of 10 months starting in April 2025. </p>
+    <p class="texte">I am 19 years old and currently in my second year of a Bachelor's Degree in Networks and Telecommunications (BUT) in Aubière (France). <br><br> 
+        I chose this field of study thanks to an internship I did at UTT (Université de Technologie de Troyes), 
+        where I was introduced to the basics of networks and had the opportunity to handle various devices. As a group, 
+        we configured switches to enable local network gaming sessions on the game Teeworlds. 
+        The explanations from the students and the project's objectives made me realize that networking was the path I wanted to pursue.<br><br> 
+        I am currently completing an internship in the field of telecommunications at TFC Auvergne (France) until June 2025.<br> 
+        Additionally, I am looking for an apprenticeship as a Network and IT Engineer starting in September 2025.</p>
 
 </body>
 </html>
