--- a/fr/competences.html
+++ b/fr/competences.html
@@ -33,13 +33,28 @@
             <strong>Pentesting :</strong> <progress value="80" max="100"></progress> 80%<br>
             Durant la deuxième année de BUT, j'ai pu effectuer une introduction au pentesting. J'ai pu voir les bases en attaquant 5 machines virtuelles avec des 
             failles différentes ce qui me demandait d'utiliser différents outils et différentes manière de penser. Pour voir plus en détail ce qui a été fait vous
-            pouvez voir le projet que j'ai fait sur ce sujet dans la rubrique projet (faut mettre un lien là.)
+            pouvez voir le projet que j'ai fait sur ce sujet dans la rubrique <a href="projet.html#sae_pentest">projet </a>
         </p>
 
         <p class="texte">
-            <strong>Sécurisation d'un serveur DNS : </strong> <progress value="70" max="100"></progress> 70%<br>
-            Lors de ma deuxième année de BUT, j'ai pu apprendre à sécuriser un serveur DNS. J'ai d'abord vu comment fonctionnait un serveur DNS,
-            puis j'ai appris à le sécuriser avec des signatures DNSSEC et en sécurisant ces signatures avec NSEC3.
+            <strong>Sécurisation de services réseaux : </strong> <progress value="75" max="100"></progress> 75%<br>
+            Lors de ma deuxième année de BUT, j'ai appris à sécuriser différents services réseaux. 
+            J'ai notamment pu voir le fonctionnement d'un reverse proxy et l'utilisation du load balancing. J'ai aussi vu les procotoles SNMP pour la supervision d'équipements réseaux et 
+            LDAP pour la gestion des utilisateurs.
+        </p>
+
+        <p class="texte">
+            <strong>Cryptographie : </strong><progress value="70" max="100"></progress> 70%<br>
+            J'ai pu apprendre les bases de la cryptographie lors de ma deuxième année de BUT. 
+            J'ai vu le fonctionnement des algorithmes de chiffrement symétrique et asymétrique ainsi que les différentes méthodes d'authentification.
+            J'ai aussi pu voir comment fonctionnait les certificats et les clés publiques/privées.
+        </p>
+
+        <p class="texte">
+            <strong>Utilisation de pare-feu Stormshield : </strong><progress value="70" max="100"></progress> 70%<br>
+            J'ai pu apprendre à utiliser le pare-feu Stormshield lors de ma deuxième année de BUT. J'ai suivi les différents "Labs" proposés par Stormshield pour apprendre à 
+            utiliser le pare-feu et à le configurer. 
+            J'ai appris à créer des règles de filtrage, à configurer des VPN et à utiliser les différentes fonctionnalités du pare-feu. 
         </p>
     </section>
 
@@ -64,7 +79,7 @@
             Au cours de ma deuxième année de BUT, j'ai appris à transmettre des données numériques entre un émetteur et un récepteur. 
             J'ai vu comment fonctionnait les différentes modulations (ASK, FSK, PSK) et comment les utiliser pour transmettre des données.
             Cette compétence a été utilisé pour un projet qui consistait à effectuer une transmission entre de SDR (Software Defined Radio), vous pouvez 
-            voir ce projet au lien ci-contre : (faut mettre un lien là).
+            voir ce projet <a href="projet.html#sae_telecom">ici</a>  .
         </p>
     </section>
 
