--- a/fr/projet.html
+++ b/fr/projet.html
@@ -40,7 +40,7 @@
                 <span class="inverted_span">2025  ·  BUT 2</span>
             </div>
 
-            <a class="titre_projet_inverted">Introduction au pentesting</a>
+            <a class="titre_projet_inverted" id="sae_pentest">Introduction au pentesting</a>
 
             <div class="texte_projet">
                 <p>
@@ -77,7 +77,7 @@
                 <span>2025  ·  BUT2</span>
             </div>
 
-            <a class="titre_projet" href="https://github.com/RobinBouvier/PikTer" target="_blank">Création d'une application communiquante</a>
+            <a class="titre_projet" href="https://github.com/RobinBouvier/PikTer" target="_blank" id="sae_java">Création d'une application communiquante</a>
 
             <div class="texte_projet">
                 <p>Afin de parfaire nos connaissances en Java, j'ai pu créer une application sous android qui permet d'envoyer et de recevoir des messages sur un feed.<br>
@@ -124,7 +124,7 @@
                 <span class="inverted_span">2024  ·  BUT 2</span>
             </div>
 
-            <a class="titre_projet_inverted">Transmission numérique entre deux SDR ADALM-Pluto</a>
+            <a class="titre_projet_inverted" id="sae_telecom">Transmission numérique entre deux SDR ADALM-Pluto</a>
 
             <div class="texte_projet">
                 <p>
@@ -133,7 +133,7 @@
                     Nous avons ensuite pour programmer les différentes étapes de la transmission (modulation, codage, décodage, démodulation ...) avec différents
                     types de modulation (ASK, FSK, MPSK ...). 
                     Nous avons ensuite testé nos programme sur les SDR pour vérifier que les transmissions étaient correctes. 
-                    Ce projet n'a pas encore été noté.
+                    J'ai obtenu la note de 16/20 pour ce projet.<br><br>
                 </p>
             </div>
 
@@ -162,7 +162,7 @@
                 <span>2024  ·  BUT 1</span>
             </div>
 
-            <a class="titre_projet" href="../projets/site_sae24/index.html" target="_blank">Création d'un réseau et installation des services associés</a>
+            <a class="titre_projet" href="../projets/site_sae24/index.html" target="_blank" id="projet_integratif">Création d'un réseau et installation des services associés</a>
 
             <div class="texte_projet">
                 <p>Pour ce projet nous étions en groupe de 5 et nous devions créer un petit réseau d'entreprise avec 2 postes client et 2 serveurs (un sur Linux et l'autre sur 
@@ -206,7 +206,7 @@
                 <span class="inverted_span">2024  ·  BUT 1</span>
             </div>
 
-            <a class="titre_projet_inverted" href="https://github.com/RobinBouvier/memo-php" target="_blank">Memory PHP</a>
+            <a class="titre_projet_inverted" href="https://github.com/RobinBouvier/memo-php" target="_blank" id="memory_php">Memory PHP</a>
 
             <div class="texte_projet">
                 <p>L'objectif de ce projet était de réaliser un jeu de memory en PHP pour apprendre ce langage et le fonctionnement des cookies sur les navigateurs. 
