--- a/en/formation.html
+++ b/en/formation.html
@@ -27,13 +27,15 @@
 
     <section class="bloc_texte">
         <p class="texte">
-            <strong>September 2024: </strong> Entered the second year of the University Technology Diploma (BUT) in Networks and Telecommunications in Aubière, France.
+            <strong>January 2025 :</strong> Completion of the third semester.<br><br>
+
+            <strong>September 2024 : </strong> Entered the second year of the University Technology Diploma (BUT) in Networks and Telecommunications in Aubière, France.
         </p>
     </section>
 
     <section class="bloc_texte">
         <p class="texte">
-            <strong>June 2023: </strong> Obtained the Baccalaureate with honors (Bien) in Le Puy-en-Velay, France.
+            <strong>June 2023 : </strong> Obtained the Baccalaureate with honors (Bien) in Le Puy-en-Velay, France.
         </p>
     </section>
 
