--- a/fr/index.html
+++ b/fr/index.html
@@ -32,10 +32,11 @@
 
     <h1 class="titre">A propos de moi</h1>
     <p class="texte">J'ai 19 ans et je suis actuellement en deuxième année de Bachelor Universitaire de Technologie (BUT) Réseaux et Télécommunications à Aubière (63). <br><br>
-    J'ai choisi ces études grâce au stage que j'ai pu faire à l'UTT (Université de Technologie de Troyes) où j'ai pu voir les bases des réseaux et manipuler différents appareils.
-    En groupe, nous avons configuré des switches pour permettre des parties de jeu en réseau local sur le jeu Teeworlds.
-    Les explications des étudiants et la finalité du projet proposé m'ont fait comprendre que le réseau était la voie que je souhaitais emprunter.<br><br>.
-    Je vais faire un stage dans le domaine des télécommuncations chez TFC Auvergne (43) à partir d'avril 2025.</p>
+        J'ai choisi ces études grâce au stage que j'ai pu faire à l'UTT (Université de Technologie de Troyes) où j'ai pu voir les bases des réseaux et manipuler différents appareils.
+        En groupe, nous avons configuré des switches pour permettre des parties de jeu en réseau local sur le jeu Teeworlds.
+        Les explications des étudiants et la finalité du projet proposé m'ont fait comprendre que le réseau était la voie que je souhaitais emprunter.<br><br>
+        Je suis actuellement en stage dans le domaine des télécommuncations chez TFC Auvergne (43) jusqu'à juin 2025.<br>
+        De plus, je suis à la recherche d'une alternance en tant qu'Ingénieur en Réseau et Informatique à compter de septembre 2025.</p>
 
 </body>
 </html>
