--- a/en/divers.html
+++ b/en/divers.html
@@ -59,9 +59,10 @@
             "Nightcrawler" is a gripping thriller that tells the story of Lou, who roams Los Angeles in search of shocking footage to sell to TV stations. I particularly
             appreciate Jake Gyllenhaal's performance as Lou, who becomes obsessed with finding increasingly graphic images, to the point of losing his morality.<br><br>
         
-            Lastly, "Yannick" is a comedy with well-written and well-acted characters, especially Yannick played by Raphaël Quenard,
-            who gets bored watching a play and decides to interrupt it. What follows is a series of events where Yannick decides to rewrite the play 
-            to make it better in his eyes, forcing the actors to perform it. <br>
+            Finally, "28 Days Later" is a striking post-apocalyptic film that reinvents the zombie genre with intensity. After a devastating virus transforms the population into enraged 
+            creatures, Jim, a young courier, awakens from a coma in a deserted and apocalyptic London. He joins a small group of survivors trying to escape the infected and the dangers 
+            lurking in this ruined world. The film stands out for its oppressive atmosphere, tense direction, and visceral portrayal of chaos. 
+            Danny Boyle skillfully blends horror and drama, enhanced by an immersive soundtrack and a grainy cinematography created by the digital cameras of the time.<br>
         </p>
 
         <div class="afficheDiversDiv">
@@ -71,8 +72,8 @@
             <a href="https://en.wikipedia.org/wiki/Nightcrawler_(film)" target="_blank">
                 <img src="../images/nightcall.jpg" class="afficheDivers">
             </a>
-            <a href="https://en.wikipedia.org/wiki/Yannick_(film)" target="_blank">
-                <img src="../images/yannick.jpg" class="afficheDivers">
+            <a href="https://fr.wikipedia.org/wiki/28_Jours_plus_tard" target="_blank">
+                <img src="../images/28j_plus_tard.jpg" class="afficheDivers">
             </a>
         </div>
     </section>
