--- a/en/projet.html
+++ b/en/projet.html
@@ -23,6 +23,8 @@
         </ul>
     </nav>
 
+    <h1 class="titre">Projects</h1>
+
     <div class="inverted_container">
 
         <div class="image_projet_inverted">
